<resources>
    <string name="app_name">GitHub</string>
    <string name="user_name">Danaila Larisa</string>
    <string name="description">Student</string>
    <string name="bio_desc"><i>Technology enthusiast</i></string>
    <string name="bucuresti"><u>Bucuresti</u></string>
    <string name="andreea"><u>larisa.danaila1@gmail</u></string>
    <string name="date1"><u>September 10</u>, <u>2015</u></string>
    <string name="date2"><u>March 28</u>, <u>2017</u></string>
    <string name="nr1"><u>1</u></string>
    <string name="nr2"><u>2</u></string>
    <string name="repo_name_owner">%1$s (%2$s)</string>
    <string name="public_checkbox">public</string>
    <string name="number">1</string>
</resources>
