<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_margin="10dp"
    tools:context="com.bignerdranch.android.githublogin.ProfileActivity">


    <ImageView
        android:id="@+id/img"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/pozagit">

    </ImageView>

    <TextView
        android:id="@+id/nume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Danaila Larisa"
        android:layout_toRightOf="@id/img"
        android:layout_marginTop="25dp"
        android:paddingRight="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nume"
        android:layout_toRightOf="@+id/img"
        android:text="Student"
        />

    <TextView
        android:id="@+id/bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bio"
        android:layout_below="@id/img"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bio_desc"
        android:layout_below="@id/bio"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        />
    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Location"
        android:layout_below="@id/description"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/bucuresti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bucuresti"

        android:textColor="#42a9fb"
        android:layout_alignBaseline="@+id/location"
        android:layout_alignBottom="@+id/location"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        android:layout_below="@id/location"
        android:layout_marginTop="10dp"
      />

    <TextView
        android:id="@+id/andreea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/andreea"
        android:textColor="#42a9fb"
        android:layout_alignBaseline="@+id/email"
        android:layout_alignBottom="@+id/email"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>


    <TextView
        android:id="@+id/created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Created"
        android:layout_below="@id/email"
        android:layout_marginTop="10dp"
       />

    <TextView
        android:id="@+id/date1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date1"
        android:textColor="#42a9fb"
        android:layout_alignBaseline="@+id/created"
        android:layout_alignBottom="@+id/created"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>


    <TextView
        android:id="@+id/updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Updated"
        android:layout_below="@id/created"
        android:layout_marginTop="10dp"
      />

    <TextView
        android:id="@+id/date2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date2"
        android:textColor="#42a9fb"
        android:layout_alignBaseline="@+id/updated"
        android:layout_alignBottom="@+id/updated"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>


    <TextView
        android:id="@+id/publicr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Public repos"
        android:layout_below="@+id/updated"
        android:layout_marginTop="10dp"/>


    <TextView
        android:id="@+id/repo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nr1"
        android:layout_below="@id/date2"
        android:textColor="#42a9fb"
        android:layout_alignBaseline="@id/publicr"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/privater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/publicr"
        android:layout_marginTop="10dp"

        android:text="Private repos"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nr2"
        android:layout_below="@id/repo1"
        android:textColor="#42a9fb"
        android:layout_alignBaseline="@id/privater"
        android:layout_alignParentRight="true"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:drawableRight="@mipmap/arrow_right"
        android:drawablePadding="4dp"
        android:layout_below="@id/privater"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="View blog"/>
</RelativeLayout>

